Fix some spacing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -506,7 +506,7 @@ body, html {
   overflow: hidden;
   width: 100%;
   height: 600px;
-  margin-top: 30px;
+  margin-top: 45px;
 }
 
 .map-text {
@@ -544,6 +544,10 @@ body, html {
   color: #5d5d5d;
   font-family: 'Roboto', sans-serif;
   font-size: 2em;
+}
+
+.groomsmen-title {
+  margin-top: 30px;
 }
 
 .bridal-party-group {
