--- a/public/app.css
+++ b/public/app.css
@@ -508,7 +508,7 @@ body, html {
 .map-container {
   position: relative;
   overflow: hidden;
-  margin-top: 30px;
+  margin-top: 45px;
   width: 100%;
   height: 600px;
 }
@@ -548,6 +548,10 @@ body, html {
   text-align: center;
   font-size: 2em;
   font-family: 'Roboto', sans-serif;
+}
+
+.groomsmen-title {
+  margin-top: 30px;
 }
 
 .bridal-party-group {
